# Excel-In-Python

./: README.md  pyproject.toml  videos.xlsx
demo1/: demo1.py
demo1/includes/: data.py  functions.py
