[tool.poetry]
name = "excel-in-python"
version = "0.1.0"
description = ""
authors = ["Arhan Busam <arhan.busam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^21.5b1"

[tool.poetry.dev-dependencies]
black = {version = "^21.5b1", allow-prereleases = true}
pylint = "^2.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
demo1 = "demo1.demo1:start"